--- a/css-compiled/git-sync.css
+++ b/css-compiled/git-sync.css
@@ -79,6 +79,9 @@
   margin: 0.2rem 0;
   padding: 0.5rem 1.5rem; }
 
+[data-remodal-id="wizard"] .step-2 ol, [data-remodal-id="wizard"] .step-2 ul, [data-remodal-id="reset-local"] .step-2 ol, [data-remodal-id="reset-local"] .step-2 ul {
+  padding-left: 1rem; }
+
 [data-remodal-id="wizard"] .step-4 .info, [data-remodal-id="reset-local"] .step-4 .info {
   font-size: 100%;
   margin: 0.2rem 0; }
