--- a/scss/plugin/_wizard.scss
+++ b/scss/plugin/_wizard.scss
@@ -118,6 +118,10 @@
       margin: 0.2rem 0;
       padding: 0.5rem 1.5rem;
     }
+
+    ol, ul {
+      padding-left: 1rem;
+    }
   }
 
   .step-4 {
